# bottom-up-panorama

./: .gitignore  CMakeLists.txt  homography.txt  homography_no_RANSAC.txt  readme.md
nice_sample/: 10_box_roi_2.txt  1_box_roi.txt  1_box_roi_2.txt  2_box_roi.txt  3_box_roi.txt  6_box_roi.txt  7_box_roi.txt
src/: main.cpp  matcher.cpp  matcher.hpp  optimizer.cpp  optimizer.hpp  reference.cpp  stitcher.cpp  stitcher.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  matcher_test.cpp
